# verejne-zakazky

./: .env.example  .gitignore  nen_list.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
adapters/: __init__.py  base.py  nen.py
config/: sources.yaml
core/: __init__.py  fetcher.py  labeler.py  models.py  normalize.py  runner.py  storage.py
frontend/: .env.example  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: TenderCard.tsx  TenderFilters.tsx
frontend/src/components/common/: EmptyState.tsx  ErrorState.tsx  LoadingSkeleton.tsx
frontend/src/components/filters/: FilterBar.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/tenders/: TenderCard.tsx  TenderDetail.tsx
frontend/src/hooks/: useFilters.ts  useTendersQuery.ts
frontend/src/lib/: supabase.ts  utils.ts
frontend/src/pages/: TendersPage.tsx
frontend/src/routes/: index.tsx
frontend/src/types/: tender.ts
scripts/: db_ping.py  nen_parse_check.py  nen_smoke.py
sql/: 2025-08-nen-indexes.sql  schema.sql
src/: App.tsx  index.css
src/components/: Layout.tsx  TenderCard.tsx  TenderFilters.tsx
src/components/tenders/: TenderCard.tsx
src/components/ui/: button.tsx
src/hooks/: useTenders.ts
src/lib/: store.ts  supabase.ts  utils.ts
src/pages/: TenderDetailPage.tsx  TendersPage.tsx
src/types/: tender.ts
